@@ -525,12 +525,6 @@
     </Compile>
     <Compile Include="packages\audio\AudioJob.cs" />
     <Compile Include="packages\audio\AudioEncoderInterface.cs" />
-    <Compile Include="packages\audio\faac\faacConfigurationPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="packages\audio\faac\faacConfigurationPanel.Designer.cs">
-      <DependentUpon>faacConfigurationPanel.cs</DependentUpon>
-    </Compile>
     <Compile Include="packages\audio\ffac3\AC3ConfigurationPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -538,7 +532,6 @@
       <DependentUpon>AC3ConfigurationPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="packages\audio\ffac3\AC3Settings.cs" />
-    <Compile Include="packages\audio\faac\FaacSettings.cs" />
     <Compile Include="packages\audio\ffmp2\MP2ConfigurationPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -567,6 +560,20 @@
     <Compile Include="packages\audio\naac\neroConfigurationPanel.Designer.cs">
       <DependentUpon>neroConfigurationPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="packages\audio\opus\OpusConfigurationPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="packages\audio\opus\OpusConfigurationPanel.Designer.cs">
+      <DependentUpon>OpusConfigurationPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="packages\audio\opus\OpusSettings.cs" />
+    <Compile Include="packages\audio\qaac\qaacConfigurationPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="packages\audio\qaac\qaacConfigurationPanel.Designer.cs">
+      <DependentUpon>qaacConfigurationPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="packages\audio\qaac\QaacSettings.cs" />
     <Compile Include="packages\audio\vorbis\OggVorbisConfigurationPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -937,10 +944,6 @@
       <DependentUpon>AudioConfigurationPanel.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="packages\audio\faac\faacConfigurationPanel.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>faacConfigurationPanel.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="packages\audio\ffac3\AC3ConfigurationPanel.resx">
       <SubType>Designer</SubType>
       <DependentUpon>AC3ConfigurationPanel.cs</DependentUpon>
@@ -960,6 +963,12 @@
     <EmbeddedResource Include="packages\audio\naac\neroConfigurationPanel.resx">
       <SubType>Designer</SubType>
       <DependentUpon>neroConfigurationPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="packages\audio\opus\OpusConfigurationPanel.resx">
+      <DependentUpon>OpusConfigurationPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="packages\audio\qaac\qaacConfigurationPanel.resx">
+      <DependentUpon>qaacConfigurationPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="packages\audio\vorbis\OggVorbisConfigurationPanel.resx">
       <SubType>Designer</SubType>
